--- a/src/style.css
+++ b/src/style.css
@@ -1,3 +1,14 @@
+/*
+* File: style.css
+* Author: Kurucz János
+* Copyright: 2023, Kurucz János
+* Group: Szoft 1/I/E
+* Date: 2023-01-31
+* Github: https://github.com/kuruczjanos/
+* Licenc: GNU GPL
+*/
+
+
 body{
     background-color:darkred;
 }
